# xmahjongg_kindle

./: Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  config.h  config.h.in  config.status  configure  configure.in  deploy-usb.sh  xmahjongg.6  xmahjongg.spec
autom4te.cache/: output.0  requests  traces.0
liblcdf/: Makefile  Makefile.am  Makefile.in
share/: kindle.conf
src/: Makefile  Makefile.am  Makefile.in  alarm.cc  alarm.hh  board.cc  board.hh  button.cc  button.hh  counter.cc  counter.hh  game.cc  game.hh  gmjts.cc  gmjts.hh  hint.cc  hint.hh  images.c  kdets.cc  kdets.hh  kmjts.cc  kmjts.hh  main.cc  matches.cc  matches.hh  moment.cc  moment.hh  panel.cc  panel.hh  random.cc  solution.cc  solution.hh  solvable.cc  solvable.hh  swgeneral.cc  swgeneral.hh  swwidget.cc  swwidget.hh  tile.cc  tile.hh  (+6 more)
